# zydeco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  zydeco.sh
include/: Engine.hpp  Fault.hpp  ITimer.hpp  IUpdateable.hpp  IWindow.hpp  Logger.hpp  Window.hpp  ZydecoCommon.hpp
include/events/: IEventHandler.hpp  IEventKeyboardSubscriber.hpp  IEventMouseSubscriber.hpp  IEventQuitSubscriber.hpp  IEventWindowSubscriber.hpp
include/game/: Mandelbrot.hpp
include/render/: Renderer.hpp
include/render/gl/: GLComputeShader.hpp  GLProgram.hpp  GLRenderObject.hpp  GLShader.hpp  GLTexture.hpp  GLUniformUploader.hpp
include/render/objects/: GLRenderObjectBackground.hpp  GLRenderObjectFractal.hpp  GLRenderObjectImGui.hpp  GLRenderObjectRainbowTriangle.hpp
include/render/shaders/: background.fs.glsl  background.vs.glsl  fractal.cs.glsl  fractal.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
include/runtime/: IThread.hpp  IUpdateable.hpp  ThreadLooping.hpp
include/sdl2/: CommonSDL2.hpp  EventHandlerSDL2.hpp  TimerSDL2.hpp  WindowSDL2.hpp
src/: Engine.cpp  main.cpp
src/game/: Engine.cpp  Mandelbrot.cpp  Window.cpp
src/render/: Renderer.cpp
src/render/gl/: GLComputeShader.cpp  GLProgram.cpp  GLRenderObject.cpp  GLShader.cpp  GLTexture.cpp  GLUniformUploader.cpp
src/render/objects/: GLRenderObjectBackground.cpp  GLRenderObjectFractal.cpp  GLRenderObjectImGui.cpp  GLRenderObjectRainbowTriangle.cpp
src/runtime/: ThreadLooping.cpp
src/sdl2/: EventHandlerSDL2.cpp  TimerSDL2.cpp  WindowSDL2.cpp
src/util/: Fault.cpp  Logger.cpp
